<resources>
    <string name="app_name">replyme</string>
    <string name="login">Login</string>
    <string name="sign_up1">Sıgn up</string>
    <string name="sign_up2">Sign up</string>
    <string name="username1">Username</string>
    <string name="username">Username</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="log_n">logın</string>
    <string name="login2">Login</string>
    <string name="password">Password</string>
    <string name="e_mail1">E-mail</string>
    <string name="s_gn_up">sıgn_up</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
</resources>